[tool.poetry]
name = "daegun-motion-game"
version = "0.1.0"
description = ""
authors = ["Dohyun Kim <0704dohyun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
mediapipe = "^0.10.15"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
